<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuTitle"
        android:title="@string/orderBy"
        app:showAsAction="never" />
    <group
        android:id="@+id/menu_group_sort"
        android:checkableBehavior="single"
        app:showAsAction="never">
        <item
            android:id="@+id/order_by_name"
            android:title="@string/name"
            app:showAsAction="never" />
        <item
            android:id="@+id/order_by_date"
            android:title="@string/installDate"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@id/menuTitle"
        android:title="@string/filter_pref"
        app:showAsAction="never" />
    <group
        android:id="@+id/menu_group_filter_pref"
        android:checkableBehavior="all"
        app:showAsAction="never">
        <item
            android:id="@+id/show_system_app"
            android:checkable="true"
            android:checked="false"
            android:title="@string/showSystemApp"
            app:showAsAction="never" />
    </group>
</menu>